<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@mipmap/kiet_logo" />


    <TextView
        android:id="@+id/txtLoginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/enter_roll_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtLoginDescMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:alpha="0.5"
        android:gravity="center"
        android:text="We need your university roll number to get started with MARS"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <!--    <TextView
                android:id="@+id/txtCollegeCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:alpha="0.7"
                android:background="@drawable/abc_alpha_et_background"
                android:gravity="center"
                android:padding="15dp"
                android:text="13029"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />-->

        <EditText
            android:id="@+id/etRollNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/abc_alpha_et_background"
            android:hint="@string/roll_number"
            android:inputType="phone"
            android:padding="15dp"
            android:paddingRight="2dp"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="20sp" />
    </RelativeLayout>

    <mars.com.ui.button.ButtonPlus
        android:id="@+id/btnSubmit"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/abc_alpha_btn_background"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>